<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">iScian Health</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ios_dialog">打开仿IOS UIAlertView</string>
    <string name="android_dialog">打开Android系统对话框</string>
    <string name="prompt">Alert</string>
    <string name="exit_app">Are you sure you want to log out?</string>
    <string name="confirm">Confirm</string>
    <string name="setting_about_text">鹿得集团是一家集医疗器械的制造，研发，贸易为一体的企业群体，总部设在上海，下属共有7家企业，主要生产基地在温州市永强海滨工业区、南通经济开发区，总面积10万余平方米。集团制造的各类产品，其品质处于国际领先水平，目前已获得CE,FDA,510(K), AAMI-SP10:2002, ISO13485, EN1060-1/2/3等多项国际认证，并且以合理的价格、完善的服务、优越的品质赢得了客户的青睐，产品远销欧洲、美洲、大洋洲、亚洲约90多个国家和地区。集团中高层管理人员均毕业于中国高等学府，大部分来自复旦大学、浙江大学、天津大学等，有着丰富的实际工作经验和企业管理能力。集团致力于产品的研制开发，拥有精良的实验设备，先进的专业技术，各类技术人员50多人，研制的产品已畅销世界各地，获得20多项国家专利，深受广大消费者及业内人士的欢迎。鹿得集团的共生文化，追求与社会、与客户、与员工之间的合理分享，和谐共生，共同发展，为追求人类的健康而不懈努力。\n\n上海煜丰国际贸易有限公司\n地址：上海市卢湾区斜土路768号致远大厦22层C座, 200023\n电话：+86-21-63056696\n传真：+86-21-63036162\n邮箱：market@lordmed.com</string>
    <string name="setting_instructions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_wechat">Wechat Connect</string>
    <string name="login_with_qzone">Log in to use qzone</string>
    <string name="login_with_other_plat">Other account login</string>
    <string name="userid_found">User information has been in existence, is to jump the login operation...</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">Authorized operation has been cancelled</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">Authorization is successful, will open the login operation…</string>
    <string name="if_register_needed">If you need to register…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">Confirm</string>
    <string name="xueya_celiang_tishi_1">正在测量</string>
    <string name="xueya_celiang_tishi_2">测量完成</string>
    <string name="miaohoufasong">s Send again code</string>
    <string name="forget_mali">Send verification code to the mailbox</string>
    <string name="xiaoxitou">English</string>
    <string name="zhaohuimima">Forgot Password</string>
    <string name="yanzhengmaguifan">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="yanzhengmagf">0123456789abcdefghijklmnopqrstuvwxyz</string>
    <string name="yonghubucunzai">User not exist</string>
    <string name="miaohouchongxinhuoqu">s Send again code</string>
    <string name="code">Code / </string>
    <string name="language">English</string>
    <string name="xiugaimimachenggong">Modify password success</string>
    <string name="youjianyifasong">Invoice email sent</string>
    <string name="et_yzm">Enter Verification Code</string>
	<string name="forget_password">Forget password</string>
	<string name="qingshurunindexinmima">enter your new password</string>
	<string name="qingzaicishurunindexinmima">confirm new password</string>
	<string name="personalcenter_newpwd">New Password / </string>
	<string name="personalcenter_confirmpwd">Confirm Password / </string>
	<string name="forget_yzm">Enter Verification Code</string>
	<string name="qingshuruchunshuzi">Please enter the correct email</string>
	<string name="qingzhuce">Incorrect username or password!</string>
	<string name="shuruyouwu">Please enter the correct email</string>
	<string name="chunshuzi">Enter Login Email</string>
	<string name="duanxinyanzhengma">Enter Login Password</string>
    <string name="ziliao_nan">M</string>
    <string name="ziliao_nv">F</string>
	<string name="zhuceyouxiang">Enter Your Email</string>
	<string name="zhucepassword">Enter Your Password</string>
    <string name="time_picker_year">Year</string>
    <string name="time_picker_month">Month</string>
    <string name="time_picker_date">Day</string>
    <string name="time_picker_hour">Hour</string>
    <string name="time_picker_minute">Minute</string>
    <string name="personalcenter_complete">complete</string>
    <string name="register_mobile">Email/</string>
    <string name="xueya_celiang_data">Data</string>
    <string name="xueya_celiang_tubiao">Charts</string>
    <string name="xueya_celiang_qushi">Trends</string>
    <string name="xueya_celiang_suggestion">血压计正在测量,\n请保持正确姿势不要说话</string>
    <string name="xueya_celiang_jieshu">Stop</string>
    <string name="xueya_celiang_chakan">view</string>
    <string name="home_content_fragment_healthinfo_jkzx">Health-Info</string>
    <string name="home_content_fragment_healthinfo_rcjy">Daily</string>
    <string name="home_content_fragment_healthinfo_xyjy">BP</string>
    <string name="home_content_fragment_healthinfo_xtjy">GLU</string>
</resources>