<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:orientation="vertical" >

    <include layout="@layout/common_titlte" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/ri_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/register_mobile"
                android:textColor="@color/black"
                android:textSize="@dimen/txt14sp" />

            <EditText
                android:id="@+id/edt_forger_mail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FBFBFB"
                android:hint="@string/zhuceyouxiang"
                android:singleLine="true"
                android:textSize="@dimen/txt14sp" />
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/blue_line" />
        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/y_z_m"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:hint="@string/forget_yzm"
                android:textColor="@color/gray"
                android:textSize="@dimen/txt14sp"
                android:maxLength="5"
                android:layout_gravity="bottom"
                android:digits="@string/yanzhengmaguifan"
                android:singleLine="true" />
            </LinearLayout> -->
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/code"
                android:textColor="@color/black"
                android:textSize="@dimen/txt14sp" />

            <EditText
                android:id="@+id/y_z_m"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FBFBFB"
                android:hint="@string/forget_yzm"
                android:digits="@string/yanzhengmagf"
                android:maxLength="5"
                android:singleLine="true"
                android:textSize="@dimen/txt14sp" />
        </LinearLayout>
            <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/blue_line" />

		<com.ludees.scian.view.TimeButton
            android:id="@+id/send_mail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg"
            android:text="@string/forget_mali"
            android:textColor="@color/white"
            android:clickable="false"
            android:textSize="@dimen/txt16sp" />

       

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/personalcenter_newpwd"
                android:textColor="@color/black"
                android:textSize="@dimen/txt14sp" />

            <EditText
                android:id="@+id/xinmima"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FBFBFB"
                android:hint="@string/qingshurunindexinmima"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLength="12"
                android:textSize="@dimen/txt14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/blue_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/personalcenter_confirmpwd"
                android:textColor="@color/black"
                android:textSize="@dimen/txt14sp" />

            <EditText
                android:id="@+id/xinmima2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FBFBFB"
                android:hint="@string/qingzaicishurunindexinmima"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLength="12"
                android:textSize="@dimen/txt14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/blue_line" />

        <Button
            android:id="@+id/pwd_btn_update"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg_false"
            android:clickable="false"
            android:text="@string/personalcenter_complete"
            android:textColor="@color/white"
            android:textSize="@dimen/txt16sp" />
    </LinearLayout>

</LinearLayout>