<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="12dp"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical" >

            <com.ludees.scian.widget.WheelView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="120dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_year"
                android:textColor="#0096F2" />

            <com.ludees.scian.widget.WheelView
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_month"
                android:textColor="#0096F2" />

            <com.ludees.scian.widget.WheelView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_date"
                android:textColor="#0096F2" />

            <com.ludees.scian.widget.WheelView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_hour"
                android:textColor="#0096F2" />

            <com.ludees.scian.widget.WheelView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:background="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_minute"
                android:textColor="#0096F2" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@drawable/scroll_picker_bar" >

            <ImageView
                android:layout_width="2dip"
                android:layout_height="30dip"
                android:layout_centerVertical="true"
                android:src="#00A1F4" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>