<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical" >

    <include layout="@layout/common_titlte" />

    <RadioGroup
        android:id="@+id/task_selector_rg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3387DB"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/xueya_shuju"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_radio_bg"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/xueya_celiang_data"
            android:textColor="@drawable/radiobutton_checked"
            android:textSize="@dimen/txt16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent" />

        <RadioButton
            android:id="@+id/xueya_tubiao"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_radio_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/xueya_celiang_tubiao"
            android:textColor="@drawable/radiobutton_checked"
            android:textSize="@dimen/txt16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent" />

        <RadioButton
            android:id="@+id/xueya_qushitu"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_radio_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/xueya_celiang_qushi"
            android:textColor="@drawable/radiobutton_checked"
            android:textSize="@dimen/txt16sp" />
    </RadioGroup>

    <com.ludees.scian.view.NoScrollViewPager
        android:id="@+id/tabpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>