<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#0069D2" >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/common_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/main_color"
            android:gravity="center"
            android:text="@string/home_content_fragment_healthinfo_jkzx"
            android:textColor="@color/white"
            android:textSize="@dimen/txt22sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/home_expert_advice_rg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#3387DB"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/home_expert_advice_rb_richang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_radio_bg"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/home_content_fragment_healthinfo_rcjy"
                android:textColor="@drawable/radiobutton_checked"
                android:textSize="@dimen/txt16sp" />

            <RadioButton
                android:id="@+id/home_expert_advice_rb_xueya"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_radio_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/home_content_fragment_healthinfo_xyjy"
                android:textColor="@drawable/radiobutton_checked"
                android:textSize="@dimen/txt16sp" />

            <RadioButton
                android:id="@+id/home_expert_advice_rb_xuetang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/tab_radio_bg"
                android:button="@null"
                android:gravity="center"
                android:text="@string/home_content_fragment_healthinfo_xtjy"
                android:textColor="@drawable/radiobutton_checked"
                android:textSize="@dimen/txt16sp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/health_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.en.scian.view.NoScrollViewPager
                android:id="@+id/tabpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/main_bottom_menu" />
            <!--
                 <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            -->
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>